@startuml SOEN342_TaskManagement_DataModel
title Task Management System — conceptual data model
skinparam classAttributeIconSize 0
skinparam shadowing false
hide empty members

' --- Enumerations ---
enum RecurrenceType {
  DAILY
  WEEKLY
  MONTHLY
  CUSTOM
}

' --- Core domain ---
class Task {
  id : int
  --
  taskName : String
  description : String
  creationTimestamp : LocalDateTime
  priority : String
  status : String
  dueDate : LocalDate
  projectName : String
  tags : List<String>
  occurrenceStatuses : Map<LocalDate, String>
  --
  '' Recurrence: recurrencePattern != null ''
  recurrencePattern : RecurrencePattern
}

class Subtask {
  id : int
  --
  title : String
  completed : boolean
  collaboratorName : String
  collaboratorCategory : String
  --
  '' collaborator-linked when collaboratorName set ''
}

class ActivityEntry {
  timestamp : LocalDateTime
  description : String
}

class RecurrencePattern {
  type : RecurrenceType
  interval : int
  startDate : LocalDate
  endDate : LocalDate
  weekdays : Set<DayOfWeek>
  dayOfMonth : Integer
  --
  generateDueDates() : List<LocalDate>
}

class Project {
  name : String
  --
  description : String
}

class Collaborator {
  name : String
  category : String
  --
  '' Junior | Intermediate | Senior ''
}

' --- Persistence aggregate ---
class RepositorySnapshot {
  tasks : List<Task>
  projects : List<Project>
}

interface TaskRepository {
  load() : RepositorySnapshot
  save(snapshot : RepositorySnapshot)
}

class FileTaskRepository <<ptms_or_csv>> {
  dataPath : Path
}

class CsvTaskRepository <<CSV>> {
  csvPath : Path
}

' --- Export read-model (flattened row) ---
class TaskView <<DTO>> {
  taskId : int
  taskName : String
  description : String
  subtaskSummary : String
  status : String
  priority : String
  dueDate : LocalDate
  projectName : String
  projectDescription : String
  collaborator : String
  collaboratorCategory : String
}

interface ICalGateway <<export>> {
  exportTasks(tasks, destinationPath)
}

class ICalGatewayImpl

' --- Relationships ---
Task "1" *-- "0..*" Subtask : subtasks
Task "1" *-- "0..*" ActivityEntry : activityHistory
Task "1" *-- "0..1" RecurrencePattern : schedule

RecurrencePattern --> RecurrenceType : type

Project "1" *-- "0..*" Collaborator : collaborators\n(map key: normalized name)

RepositorySnapshot "1" o-- "0..*" Task
RepositorySnapshot "1" o-- "0..*" Project

TaskRepository <|.. FileTaskRepository
FileTaskRepository ..> CsvTaskRepository : delegates load\nwhen file is CSV

Task ..> Project : assigns via\nprojectName string\n(no direct reference)

ICalGateway <|.. ICalGatewayImpl
TaskView ..> Task : <<derived for CSV / iCal>>

note bottom of Task
  Examples of domain rules in code:
  - Non-recurring: one dueDate and one status
  - Recurring: pattern yields dates; occurrenceStatuses holds per-date status
  - Subtasks: checklist items or collaborator-linked rows
  - Limits: max 20 subtasks; unique title+occurrence; collaborator caps
end note

note bottom of RepositorySnapshot
  Persistence: FileTaskRepository loads/saves this aggregate
  (PTMS line format or CSV when file starts with TaskName header)
end note

@enduml
